--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     // 3. Add cell towers GeoJSON Data
     // Null variable that will hold cell tower data
-    var cellTowers = null;
+    var airports = null;
 
 
     // 4. build up a set of colors from colorbrewer's dark2 category
@@ -79,7 +79,7 @@
     }
 
     // Get GeoJSON and put on it on the map when it loads
-    cellTowers= L.geoJson.ajax("assets/cell_towers.geojson", {
+    cellTowers= L.geoJson.ajax("assets/airports.geojson", {
         // assign a function to the onEachFeature parameter of the cellTowers object.
         // Then each (point) feature will bind a popup window.
         // The content of the popup window is the value of `feature.properties.company`
@@ -89,19 +89,16 @@
         pointToLayer: function (feature, latlng) {
             var id = 0;
             if (feature.properties.company == "New Cingular") { id = 0; }
-            else if (feature.properties.company == "Cellco")  { id = 1; }
-            else if (feature.properties.company == "RCC Minnesota")  { id = 2; }
-            else if (feature.properties.company == "Verizon")  { id = 3; }
-            else if (feature.properties.company == "US Cellular")  { id = 4; }
-            else if (feature.properties.company == "Hood River Cellular")  { id = 5; }
-            else if (feature.properties.company == "Medford Cellular")  { id = 6; }
-            else if (feature.properties.company == "Oregon RSA")  { id = 7; }
-            else { id = 8;} // "Salem Cellular"
-            return L.marker(latlng, {icon: L.divIcon({className: 'fa fa-signal marker-color-' + (id + 1).toString() })});
+            else { id = 8;} // 
+            return L.marker(latlng, {icon: L.divIcon({className: 'fa fa-plane marker-color-' + (id + 1).toString() })});
         },
-        attribution: 'Cell Tower Data &copy; Map Cruzin | Oregon counties &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Bo Zhao'
+        attribution: 'Airport Data &copy; Map Cruzin | States &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Paul OBrien'
     }).addTo(mymap);
 
+    // create the states layer
+    L.geoJson.ajax("assets/us-states.geojson", {
+        style: style
+    }).addTo(mymap);
 
     // 6. Set function for color ramp
     colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('RdPu').colors(5);
@@ -129,14 +126,6 @@
         };
     }
 
-    // 8. Add county polygons
-    // create counties variable, and assign null to it.
-    var counties = null;
-    counties = L.geoJson.ajax("assets/counties.geojson", {
-        style: style
-    }).addTo(mymap);
-
-
     // 9. Create Leaflet Control Object for Legend
     var legend = L.control({position: 'topright'});
 
@@ -145,22 +134,15 @@
 
         // Create Div Element and Populate it with HTML
         var div = L.DomUtil.create('div', 'legend');
-        div.innerHTML += '<b># Cell Tower</b><br />';
+        div.innerHTML += '<b># of Airports</b><br />';
         div.innerHTML += '<i style="background: ' + colors[4] + '; opacity: 0.5"></i><p>19+</p>';
         div.innerHTML += '<i style="background: ' + colors[3] + '; opacity: 0.5"></i><p>14-18</p>';
         div.innerHTML += '<i style="background: ' + colors[2] + '; opacity: 0.5"></i><p>11-13</p>';
         div.innerHTML += '<i style="background: ' + colors[1] + '; opacity: 0.5"></i><p> 6-10</p>';
         div.innerHTML += '<i style="background: ' + colors[0] + '; opacity: 0.5"></i><p> 0- 5</p>';
-        div.innerHTML += '<hr><b>Company<b><br />';
-        div.innerHTML += '<i class="fa fa-signal marker-color-1"></i><p> New Cingular</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-2"></i><p> Cello</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-3"></i><p> RCC Minnesota</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-4"></i><p> Verizon</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-5"></i><p> US Cellular</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-6"></i><p> Hood River Cellular</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-7"></i><p> Medford Cellular</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-8"></i><p> Oregon RSA</p>';
-        div.innerHTML += '<i class="fa fa-signal marker-color-9"></i><p> Salem Cellular</p>';
+        div.innerHTML += '<hr><b>Airports<b><br />';
+        div.innerHTML += '<i class="fa fa-plane marker-color-7"></i><p> With Control Tower</p>';
+        div.innerHTML += '<i class="fa fa-plane marker-color-9"></i><p> No Control Tower</p>';
         // Return the Legend div containing the HTML content
         return div;
     };
