--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     }
 
     // Get GeoJSON and put on it on the map when it loads
-    cellTowers= L.geoJson.ajax("assets/airports.geojson", {
+    airports= L.geoJson.ajax("assets/airports.geojson", {
         // assign a function to the onEachFeature parameter of the cellTowers object.
         // Then each (point) feature will bind a popup window.
         // The content of the popup window is the value of `feature.properties.company`
@@ -88,8 +88,9 @@
         },
         pointToLayer: function (feature, latlng) {
             var id = 0;
-            if (feature.properties.company == "New Cingular") { id = 0; }
-            else { id = 8;} //
+            if (feature.properties.CNTL_TWR == "Y") { id = 0; }
+            else if (feature.properties.CNTL_TWR == "N")  { id = 4; }
+            else { id = 2;} //
             return L.marker(latlng, {icon: L.divIcon({className: 'fa fa-plane marker-color-' + (id + 1).toString() })});
         },
         attribution: 'Airport Data &copy; Map Cruzin | States &copy; Oregon Explorer | Base Map &copy; CartoDB | Made By Paul OBrien'
