--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     // 7. Set style function that sets fill color.md property equal to cell tower density
     function style(feature) {
         return {
-            fillColor: setColor(feature.properties.CT_CNT),
+            fillColor: setColor(feature.properties.count),
             fillOpacity: 0.4,
             weight: 2,
             opacity: 1,
