--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.4/chroma.min.js"></script>
+    <script src="https://unpkg.com/labelgun@6.0.0/lib/labelgun.min.js"></script>
+    <script src="https://unpkg.com/rbush@2.0.1/rbush.min.js"></script>
+    <script type="text/javascript" src="https://cloudybay.github.io/leaflet.latlng-graticule/leaflet.latlng-graticule.js"></script>
+    
 </head>
 <body>
 <!-- Our web map and content will go here -->
@@ -125,7 +129,7 @@
            labels.push(label);
         }
     }).addTo(mymap);
-
+3
     // 6. Set function for color ramp
     colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('RdPu').colors(5);
 
