--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Airports in the United States</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"/>
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
     <style>
-        html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff;}
+        html, body, #map { width: 100%; height: 100%; margin: 0; background: #fff; }
         .legend {
             line-height: 16px;
             width: 140px;
@@ -50,7 +50,7 @@
     </style>
     <script src="https://unpkg.com/rbush@2.0.1/rbush.min.js"></script>
     <script src="https://unpkg.com/labelgun@6.0.0/lib/labelgun.min.js"></script>
-    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-ajax/2.1.0/leaflet.ajax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.4.4/proj4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4leaflet/1.0.2/proj4leaflet.min.js"></script>
@@ -62,33 +62,33 @@
 <!-- Our web map and content will go here -->
 <div id="map"></div>
 <script>
-    // 14. This is core of how Labelgun works. We must provide two functions, one
-    // that hides our labels, another that shows the labels. These are essentially
-    // callbacks that labelgun uses to actually show and hide our labels
-    // In this instance we set the labels opacity to 0 and 1 respectively.
-    var hideLabel = function(label){ label.labelObject.style.opacity = 0;};
-    var showLabel = function(label){ label.labelObject.style.opacity = 1;};
-    var labelEngine = new labelgun.default(hideLabel, showLabel);
-    var labels = [];
-    // 18. define the coordinate reference system (CRS)
-    mycrs = new L.Proj.CRS('EPSG:2991',
-        '+proj=lcc +lat_1=43 +lat_2=45.5 +lat_0=41.75 +lon_0=-120.5 +x_0=400000 +y_0=0 +ellps=GRS80 +datum=NAD83 +units=m +no_defs',
-        {
-            resolutions: [8192, 4096, 2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1] // example zoom level resolutions
-        }
-    );
+
+// 14. This is core of how Labelgun works. We must provide two functions, one
+   // that hides our labels, another that shows the labels. These are essentially
+   // callbacks that labelgun uses to actually show and hide our labels
+   // In this instance we set the labels opacity to 0 and 1 respectively.
+   var hideLabel = function(label){ label.labelObject.style.opacity = 0;};
+   var showLabel = function(label){ label.labelObject.style.opacity = 1;};
+   var labelEngine = new labelgun.default(hideLabel, showLabel);
+   var labels = [];
+
+   // 18. define the coordinate reference system (CRS)
+   mycrs = new L.Proj.CRS('SR-ORG:8480',
+       '+proj=aea +lat_1=28 +lat_2=12 +lat_0=20 +lon_0=78 +x_0=2000000 +y_0=2000000 +ellps=WGS84 +datum=WGS84 +units=m +no_defs',
+       {
+           resolutions: [8192, 4096, 2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1] // example zoom level resolutions
+       }
+   );
+
     // 1. Create a map object.
     var mymap = L.map('map', {
-        crs: mycrs,  // 19. assign the custom crs to the crs option. change the zoom levels due to the change of projection.
         center: [44.13, -119.93],
-        zoom: 3, // we choose zoom level 3
+        zoom: 4,
         maxZoom: 10,
         minZoom: 3,
         detectRetina: true});
     // 2. Add a base map.
-  //  L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
-    // 20. comment off the base map, because the publicly shared base map usually cannot reprojected
-    // L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
+    // L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
     // 3. Add cell towers GeoJSON Data
     // Null variable that will hold cell tower data
     var airports = null;
@@ -109,14 +109,23 @@
         pointToLayer: function (feature, latlng) {
             var id = 0;
             if (feature.properties.CNTL_TWR == "N") { id = 0; }
-            else if (feature.properties.CNTL_TWR == "Y") { id = 4; }
-            else { id = 2;} // "Salem Cellular"
+            else if (feature.properties.CNTL_TWR == "Y")  { id = 4; }
+            else { id = 2;} //
             return L.marker(latlng, {icon: L.divIcon({className: 'fa fa-plane marker-color-' + (id + 1).toString() })});
         },
         attribution: 'Airport Data &copy; DATA.gov | States &copy; Mike Bostock | Base Map &copy; CartoDB | Made By Paul OBrien'
     }).addTo(mymap);
+    // create the states layer
+    var states = null;
+    states= L.geoJson.ajax("Assets/us-states.geojson", {
+        style: style,
+        onEachFeature: function (feature, label) {
+           label.bindTooltip(feature.properties.name, {className: 'feature-label', permanent:true, direction: 'center'});
+           labels.push(label);
+       }
+    }).addTo(mymap);
     // 6. Set function for color ramp
-    colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('OrRd').colors(5);
+    colors = chroma.scale('OrRd').colors(5); //colors = chroma.scale('RdPu').colors(5);
     function setColor(density) {
         var id = 0;
         if (density > 18) { id = 4; }
@@ -129,7 +138,7 @@
     // 7. Set style function that sets fill color.md property equal to cell tower density
     function style(feature) {
         return {
-            fillColor: setColor(feature.properties.CT_CNT),
+            fillColor: setColor(feature.properties.count),
             fillOpacity: 0.4,
             weight: 2,
             opacity: 1,
@@ -137,85 +146,81 @@
             dashArray: '4'
         };
     }
-    // 8. Add county polygons
-    // create counties variable, and assign null to it.
-    // 15. Create a label for each county.
-    var states = null;
-    counties = L.geoJson.ajax("Assets/us-states.geojson", {
-        style: style,
-  }).addTo(mymap);
     // 9. Create Leaflet Control Object for Legend
     var legend = L.control({position: 'topright'});
     // 10. Function that runs when legend is added to map
     legend.onAdd = function () {
         // Create Div Element and Populate it with HTML
         var div = L.DomUtil.create('div', 'legend');
-        div.innerHTML += '<b># Of Airports</b><br />';
+        div.innerHTML += '<b># of Airports</b><br />';
         div.innerHTML += '<i style="background: ' + colors[4] + '; opacity: 0.5"></i><p>19+</p>';
         div.innerHTML += '<i style="background: ' + colors[3] + '; opacity: 0.5"></i><p>14-18</p>';
         div.innerHTML += '<i style="background: ' + colors[2] + '; opacity: 0.5"></i><p>11-13</p>';
         div.innerHTML += '<i style="background: ' + colors[1] + '; opacity: 0.5"></i><p> 6-10</p>';
         div.innerHTML += '<i style="background: ' + colors[0] + '; opacity: 0.5"></i><p> 0- 5</p>';
-        div.innerHTML += '<hr><b>Aiports<b><br />';
+        div.innerHTML += '<hr><b>Airports<b><br />';
         div.innerHTML += '<i class="fa fa-plane marker-color-7"></i><p> With Control Tower</p>';
-        div.innerHTML += '<i class="fa fa-plane marker-color-9"></i><p> With No Control Tower</p>';
+        div.innerHTML += '<i class="fa fa-plane marker-color-9"></i><p> No Control Tower</p>';
         // Return the Legend div containing the HTML content
         return div;
     };
     // 11. Add a legend to map
     legend.addTo(mymap);
     // 12. Add a scale bar to map
-    // 21. comment off the scale bar, because in same project, scalebar does not make sense.
     // L.control.scale({position: 'bottomleft'}).addTo(mymap);
+
     // 13. Add a latlng graticules.
-    L.latlngGraticule({
-        showLabel: true,
-        opacity: 0.2,
-        color: "#747474",
-        zoomInterval: [
-            {start: 3, end: 7, interval: 2},
-            {start: 8, end: 10, interval: 0.5}
-        ]
-    }).addTo(mymap);
-    // 16. create an addLabel function to dynamically update the visible labels, aiming to avoid the lable overlap.
-    function addLabel(layer, id) {
-        // This is ugly but there is no getContainer method on the tooltip :(
-        var label = layer.getTooltip()._source._tooltip._container;
-        if (label) {
-            // We need the bounding rectangle of the label itself
-            var rect = label.getBoundingClientRect();
-            // We convert the container coordinates (screen space) to Lat/lng
-            var bottomLeft = mymap.containerPointToLatLng([rect.left, rect.bottom]);
-            var topRight = mymap.containerPointToLatLng([rect.right, rect.top]);
-            var boundingBox = {
-                bottomLeft : [bottomLeft.lng, bottomLeft.lat],
-                topRight   : [topRight.lng, topRight.lat]
-            };
-            // Ingest the label into labelgun itself
-            labelEngine.ingestLabel(
-                boundingBox,
-                id,
-                parseInt(Math.random() * (5 - 1) + 1), // Weight
-                label,
-                label.innerText,
-                false
-            );
-            // If the label hasn't been added to the map already
-            // add it and set the added flag to true
-            if (!layer.added) {
-                layer.addTo(mymap);
-                layer.added = true;
-            }
-        }
-    }
-    // 17. We will update the visualization of the labels whenever you zoom the map.
-    mymap.on("zoomend", function(){
-        var i = 0;
-        counties.eachLayer(function(label){
-            addLabel(label, ++i);
-        });
-        labelEngine.update();
-    });
+   L.latlngGraticule({
+       showLabel: true,
+       opacity: 0.2,
+       color: "#747474",
+       zoomInterval: [
+           {start: 3, end: 7, interval: 2},
+           {start: 8, end: 10, interval: 0.5}
+       ]
+   }).addTo(mymap);
+
+   // 16. create an addLabel function to dynamically update the visible labels, aiming to avoid the lable overlap.
+
+   function addLabel(layer, id) {
+
+       // This is ugly but there is no getContainer method on the tooltip :(
+       var label = layer.getTooltip()._source._tooltip._container;
+       if (label) {
+           // We need the bounding rectangle of the label itself
+           var rect = label.getBoundingClientRect();
+           // We convert the container coordinates (screen space) to Lat/lng
+           var bottomLeft = mymap.containerPointToLatLng([rect.left, rect.bottom]);
+           var topRight = mymap.containerPointToLatLng([rect.right, rect.top]);
+           var boundingBox = {
+               bottomLeft : [bottomLeft.lng, bottomLeft.lat],
+               topRight   : [topRight.lng, topRight.lat]
+           };
+           // Ingest the label into labelgun itself
+           labelEngine.ingestLabel(
+               boundingBox,
+               id,
+               parseInt(Math.random() * (5 - 1) + 1), // Weight
+               label,
+               label.innerText,
+               false
+           );
+           // If the label hasn't been added to the map already
+           // add it and set the added flag to true
+           if (!layer.added) {
+               layer.addTo(mymap);
+               layer.added = true;
+           }
+       }
+   }
+   // 17. We will update the visualization of the labels whenever you zoom the map.
+   mymap.on("zoomend", function(){
+       var i = 0;
+       states.eachLayer(function(label){
+           addLabel(label, ++i);
+       });
+       labelEngine.update();
+   });
 </script>
 </body>
 </html>
