--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
    var labels = [];
 
    // 18. define the coordinate reference system (CRS)
-   mycrs = new L.Proj.CRS('SR-ORG:8480',
-       '+proj=aea +lat_1=28 +lat_2=12 +lat_0=20 +lon_0=78 +x_0=2000000 +y_0=2000000 +ellps=WGS84 +datum=WGS84 +units=m +no_defs',
+   mycrs = new L.Proj.CRS('SR-ORG:6630',
+       '+proj=aea +lat_1=29.5 +lat_2=45.5 +lat_0=23 +lon_0=-96 +x_0=0 +y_0=0 +ellps=GRS80 +datum=NAD83 +units=m +no_defs',
        {
            resolutions: [8192, 4096, 2048, 1024, 512, 256, 128, 64, 32, 16, 8, 4, 2, 1] // example zoom level resolutions
        }
@@ -82,10 +82,11 @@
 
     // 1. Create a map object.
     var mymap = L.map('map', {
-        center: [44.13, -119.93],
-        zoom: 4,
+        crs: mycrs,
+        center: [39.82, -98.57],
+        zoom: 1,
         maxZoom: 10,
-        minZoom: 3,
+        minZoom: 1,
         detectRetina: true});
     // 2. Add a base map.
     // L.tileLayer('https://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png').addTo(mymap);
